--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.open.widgetdemo.IListViewActivity">
+        <activity android:name="com.open.widgetdemo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.open.widgetdemo.IRecyclerViewActivity" android:screenOrientation="portrait" />
+        <activity android:name="com.open.widgetdemo.IListViewActivity" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
